Remove not needed filters and plugins

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,5 +13,5 @@ logstash_ssl_key_file: ""
 
 logstash_enabled_on_boot: yes
 
-logstash_install_plugins:
-  - logstash-input-beats
+#logstash_install_plugins:
+#  - logstash-input-beats
