Specify fiöter tag depending on opengate instalation

--- a/files/filters/log.conf
+++ b/files/filters/log.conf
@@ -16,7 +16,7 @@ filter {
 output {
   elasticsearch { 
     hosts => ["localhost:9200"] 
-    index => "%{type}"
+    index => "%{type}-%{inst}"
   }
   stdout { codec => rubydebug }
 }
