--- a/tests/requirements.yml
+++ b/tests/requirements.yml
@@ -1,3 +1,6 @@
 ---
-- src: geerlingguy.java
-- src: geerlingguy.elasticsearch
+- src: https://github.com/picturemaxx/ansible-java/archive/master.tar.gz
+  name: ansible-java
+ 
+- src: https://github.com/picturemaxx/ansible-elasticsearch/archive/master.tar.gz
+  name: ansible-elasticsearch
