--- a/tests/test.yml
+++ b/tests/test.yml
@@ -12,6 +12,6 @@
       when: ansible_os_family == 'Debian'
 
   roles:
-    - geerlingguy.java
-    - geerlingguy.elasticsearch
+    - ansible-java
+    - ansible-elasticsearch
     - role_under_test
