--- a/tasks/setup-Debian.yml
+++ b/tasks/setup-Debian.yml
@@ -1,4 +1,10 @@
 ---
+
+- name: Ensure apt-transport-https is installed
+  apt:
+    name: apt-transport-https
+    state: present
+
 - name: Add Elasticsearch apt key.
   apt_key:
     url: http://packages.elasticsearch.org/GPG-KEY-elasticsearch
