provide multiple handlers

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,3 +1,8 @@
 ---
-- name: restart logstash
+- name: restart logstash 14.04
   command: restart logstash
+
+- name: restart logstash
+  service:
+    name: logstash
+    state: restarted
