--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,3 +7,10 @@
 
 - include: ssl.yml
 #- include: plugins.yml
+
+- name: Ensure Logstash is started and enabled on boot.
+  service:
+    name: logstash
+    state: started
+    enabled: "{{ logstash_enabled_on_boot }}"
+
